code wrap bug fix on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@ body {
 
 .wrap {
     max-width: 1000px;
-    margin: 0 auto
+    margin: 0 auto;
 }
 
 #content {
@@ -202,6 +202,10 @@ article.post {
 
     h3 {
         font-size: 1.3em;
+    }
+
+    .wrap {
+        margin: initial;
     }
 }
 
